--- a/src/views/pages/equip-cat-1.pug
+++ b/src/views/pages/equip-cat-1.pug
@@ -5,6 +5,57 @@ include ../components/equip-card
 include ../components/model-tabs
 
 block content 
+  -
+    var ddata = [
+      {
+        title: 'Барфидер Fedek XT-107',
+        text: 'Барфидер Fedek XT-107 Автомат для подачи прутка с диаметром от 1мм до 7мм и длиной до 2500мм.',
+      },
+      {
+        title: 'Опции для барфидера',
+        text: 'Канал для прутка (серый) – каждый канал предназначен для нескольких прутков в некотором диапазоне диаметров. Толкатель (розовый) - каждый толкатель предназначен для нескольких прутков в некотором диапазоне диаметров. Цанга толкателя (зеленая) – каждая цан ...',
+      },
+      {
+        title: 'Барфидер Fedek XT-210',
+        text: 'Автомат для подачи прутка с диаметром от 2мм до 12мм и длиной от 2500мм до 3750мм.',
+      },
+      {
+        title: 'Вращающийся люнет',
+        text: 'Во время обработки на АПТ заготовка все время находится внутри люнета. Данный люнет связан ременной передачей с главным шпинделем и вращается вместе с ним и вместе с заготовкой. Вращающийся люнет – это первый выбор для широкого круга задач.',
+      },
+      {
+        title: 'Вращающийся люнет',
+        text: 'Во время обработки на АПТ заготовка все время находится внутри люнета. Данный люнет связан ременной передачей с главным шпинделем и вращается вместе с ним и вместе с заготовкой. Вращающийся люнет – это первый выбор для широкого круга задач.',
+      },
+      {
+        title: 'Грубый люнет',
+        text: 'Используется для обработки деталей с соотношением длины к диаметру менее 3. При этом, АПТ работает так же, как обычный токарный станок, т.е. без дополнительной поддержки заготовки.',
+      },
+      {
+        title: 'Цанга шпинделя и противошпинделя',
+        text: 'Данный люнет НЕ связан со шпинделем. Во время обработки детали он остается неподвижным. Неподвижный люнет может быть использован при обработке твердых материалов (например: сталей) при ...',
+      },
+      {
+        title: 'Вращающийся люнет',
+        text: 'Во время обработки на АПТ заготовка все время находится внутри люнета. Данный люнет связан ременной передачей с главным шпинделем и вращается вместе с ним и вместе с заготовкой. Вращающийся люнет – это первый выбор для широкого круга задач.',
+      },
+      {
+        title: 'Люнетная втулка',
+        text: 'Цанга, которая устанавливается в люнет и служит для поддержки заготовки во время обработки. Рассчитана на определенный размер заготовки с точностью 0,1мм.',
+      },
+      {
+        title: 'Полная ось С',
+        text: 'На основной и противошпиндель может быть установлена система отсчета и управления, позволяющая поворачивать шпиндель с заготовкой на любой угол и производить с ней фрезерные и сверлильные операции.',
+      },
+      {
+        title: 'Дополнительные суппорты с неподвижными и приводными инструментами',
+        text: 'Многие модели АПТ могут оснащаться дополнительными суппортами, которые расширяют технологические возможности оборудования.',
+      },
+      {
+        title: 'Система ЧПУ по выбору',
+        text: 'На АПТ могут быть установлены системы ЧПУ Fanuc и Mitsubishi различных серий.',
+      },
+    ]
   .equip-page 
     section.section.section--first 
       .container 
@@ -17,5 +68,5 @@ block content
           .model-tabs__item.active(data-tabs-item='')
             |Возможные опции
         .equip-page__grid.equip-page__grid--alt.margin-top.margin-top--md 
-          - for (i = 0; i < 12; i++)
-            +equip-card.equip-card--sm( text = 'Используется для обработки деталей с соотношением длины к диаметру менее 3. При этом, АПТ работает так же, как обычный токарный станок, т.е. без дополнительной поддержки заготовки.')
+          each item in ddata
+            +equip-card.equip-card--sm( text = item.text title = item.title img = 'assets/images/equip/equip-card-10.jpg')
