--- a/src/views/pages/equip-detail.pug
+++ b/src/views/pages/equip-detail.pug
@@ -5,6 +5,41 @@ include ../components/equip-card
 
 
 block content 
+  -
+    var ddata = [
+      {
+        title: 'С направляющими качения',
+        img: 'assets/images/equip/equip-card-6.jpg',
+      },
+      {
+        title: 'С направляющими качения и противошпинделем',
+        img: 'assets/images/equip/equip-card-7.jpg',
+      },
+      {
+        title: 'С направляющими качения и осью Y',
+        img: 'assets/images/equip/equip-card-8.jpg',
+      },
+      {
+        title: 'Роботизированные с направляющими качениятокарно-фрезерные с направляющими качения',
+        img: 'assets/images/equip/equip-card-9.jpg',
+      },
+      {
+        title: 'Трубообрабатывающие',
+        img: 'assets/images/equip/equip-card-10.jpg',
+      },
+      {
+        title: 'С направляющими скольжения и осью Y',
+        img: 'assets/images/equip/equip-card-11.jpg',
+      },
+      {
+        title: 'С направляющими скольжения',
+        img: 'assets/images/equip/equip-card-11.jpg',
+      },
+      {
+        title: 'Автоматы продольного точения',
+        img: 'assets/images/equip-card-1.jpg',
+      },
+    ]
   .equip-page 
     section.section.section--first 
       .container 
@@ -12,8 +47,8 @@ block content
     section.section
       .container 
         .equip-page__grid 
-          - for (i = 0; i < 8; i++)
-            +equip-card.equip-card--md(text = 'Токарные станки с ЧПУ на направляющих качения с максимальной частотой вращения шпинделя 6000 об/мин и возможностью установки фрезерного привода. Длинные заготовки возможно обрабатывать, используя заднюю бабку, поджимая автоматическим задним центром, также возможна обработка длинных валов, как в ручном, так и в автоматическом люнете.')
+          each item in ddata
+            +equip-card.equip-card--md(title = item.title img = item.img text = 'Токарные станки с ЧПУ на направляющих качения с максимальной частотой вращения шпинделя 6000 об/мин и возможностью установки фрезерного привода. Длинные заготовки возможно обрабатывать, используя заднюю бабку, поджимая автоматическим задним центром, также возможна обработка длинных валов, как в ручном, так и в автоматическом люнете.')
     section.section 
       .container 
         h2.section__title 
@@ -36,9 +71,9 @@ block content
           .equip-page__features-row 
             .equip-page__features-col
               h4.equip-page__features-title 
-                |Предназначен для выполнения следующего вида работ:
+                |Эксплуатационные преимущества токарного оборудования с ЧПУ:
               ul.features-list.features-list--small
-                each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
+                each item in ['Выпуск продукции высокого качества. вне зависимости от объема серии производятся идентичные по всем параметрам детали;', 'Технологическая гибкость. Для обработки заготовок разных типов необходима только замена рабочей программы;', 'Высочайшая точность обработки и соблюдение геометрии. токарные станки с ЧПУ формируют детали с минимумом погрешностей;', 'Токарные станки с ЧПУ формируют детали с минимумом погрешностей;', 'Высокий эксплуатационный ресурс. выход бракованной продукции практически ликвидируется за счет надежности оборудования;', 'По конструктивному исполнению различают вертикальные и горизонтальные токарные станки. модели с горизонтальной компоновкой более востребованы для изготовления мелких и среднегабаритных деталей (токарно-фрезерная обработка, продольное точение). вертикальные модели служат преимущественно для обработки коротких массивных заготовок, имеющих значительный диаметр.', ]
                   li.features-list__item
                     |#{item}
             .equip-page__features-col
@@ -49,7 +84,7 @@ block content
               h4.equip-page__features-title 
                 |Вы можете приобрести станки:
               ul.features-list.features-list--small
-                each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
+                each item in ['Многофункциональные. Выполняют весь спектр токарных операций и предназначены для обработки множества типов заготовок;', 'Повышенной производительности. Предназначены для непрерывных производственных циклов, в том числе для точения труднообрабатываемых заготовок;', 'Для обработки валов и втулок. Разработаны специально для точения криволинейных поверхностей тел вращения, формирования резьбы и торцевой обработки. Возможно сверление отверстий (при наличии фрезерных функций);', 'Для обработки валов и труб. Используются для токарной обработки длинномерных заготовок (нарезка резьбы, точение криволинейных поверхностей и т.д.).',]
                   li.features-list__item
                     |#{item}
     section.section.section--last 
