--- a/src/views/pages/instruments-detail-1.pug
+++ b/src/views/pages/instruments-detail-1.pug
@@ -17,10 +17,10 @@ block content
         .panel
           .panel__col
             .panel__container
-              img(src="assets/images/instrument-1.jpg", alt="")
+              img(src="assets/images/instruments/instruments-13.jpg", alt="")
           .panel__col
             .panel__text 
-              |Твердосплавные пластины наиболее универсальны в использовании
+              |Применяется для нарезания внутренней резьбы в длинностружечных материалах: сталях, нержавейках и цветных металлах
           .panel__col  
             .button(data-fancy-button='10')
               |Материалы для скачивания
