--- a/src/views/pages/instruments.pug
+++ b/src/views/pages/instruments.pug
@@ -13,22 +13,287 @@ block content
         {
           id: 'q1',
           title: 'Корпусной режущий инструмент',
+          items: [
+            {
+              img: 'assets/images/instrument-1.jpg',
+              title: 'Пластины для точения',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-2.jpg',
+              title: 'Токарные пластины MICRONEGA',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-3.jpg',
+              title: 'Пластины для фрезерования',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-4.jpg',
+              title: 'Пластины для корпусных сверл',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-5.jpg',
+              title: 'Токарные державки',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instrument-1.jpg',
+              title: 'Державки MICRONEGA',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instrument-1.jpg',
+              title: 'Державки MICROBORING',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-6.jpg',
+              title: 'Корпусные сверла',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-6.jpg',
+              title: 'Корпусные сверла',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-7.jpg',
+              title: 'Корпусные фрезы',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+          ]
         },
         {
           id: 'q2',
           title: 'Осевой режущий инструмент',
+          items: [
+            {
+              img: 'assets/images/instruments/instruments-8.jpg',
+              title: 'Сверла',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-9.jpg',
+              title: 'Центровки',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-10.jpg',
+              title: 'Концевые фрезы',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-11.jpg',
+              title: 'Фасочные фрезы',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-12.jpg',
+              title: 'Борфрезы',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-9.jpg',
+              title: 'Метчики машинные метрические',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-10.jpg',
+              title: 'Метчики машинные трубная резьба',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-11.jpg',
+              title: 'Метчики машинные резьба UNC/UNF',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-13.jpg',
+              title: 'Раскатники',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-14.jpg',
+              title: 'Ручные метчики',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-15.jpg',
+              title: 'Плашки',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+          ]
         },
         {
           id: 'q3',
           title: 'Вспомогательный инструмент для фрезерных станков с ЧПУ',
+          items: [
+            {
+              img: 'assets/images/instruments/instruments-16.jpg',
+              title: 'Цанговые патроны',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-17.jpg',
+              title: 'Резьбонарезные патроны',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-18.jpg',
+              title: 'Сверлильные патроны',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-19.jpg',
+              title: 'Штревели',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-20.jpg',
+              title: 'Расточные головки и борштанги',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-21.jpg',
+              title: 'Оправки для сверл с конусом Морзе',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-22.jpg',
+              title: 'Оправки для фрез с креплением Weldon',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-19.jpg',
+              title: 'Оправки для фрез с винтовым креплением',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-23.jpg',
+              title: 'Оправки для дисковых фрез',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-24.jpg',
+              title: 'Оправки для торцевых и насадных фрез',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-25.jpg',
+              title: 'Тестовые оправки',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+          ]
         },
         {
           id: 'q4',
           title: 'Вспомогательный инструмент для токарных станков с ЧПУ',
+          items: [
+            {
+              img: 'assets/images/instruments/instruments-26.jpg',
+              title: 'Держатели призматических резцов',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-27.jpg',
+              title: 'Держатели расточных резцов и осевого инструмента',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-24.jpg',
+              title: 'Cверлильно-фрезерные головки VDI',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-43.jpg',
+              title: 'Резьбонарезные головки VDI',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-28.jpg',
+              title: 'Тестовые оправки',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-29.jpg',
+              title: 'Регулируемые упоры и грейпферы',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-30.jpg',
+              title: 'Токарные кулачковые патроны',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-31.jpg',
+              title: 'Кулачки для патронов',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-32.jpg',
+              title: 'Сухари',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-33.jpg',
+              title: 'Приспособления для расточки кулачков',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-44.jpg',
+              title: 'Токарные цанговые патроны',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-34.jpg',
+              title: 'Цанги для патронов',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-35.jpg',
+              title: 'Задние центры',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+          ]
         },
         {
           id: 'q5',
           title: 'Аксессуары для инструмента',
+          items: [
+            {
+              img: 'assets/images/instruments/instruments-36.jpg',
+              title: 'Цанги',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-37.jpg',
+              title: 'Цанги для метчиков',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-39.jpg',
+              title: 'Вставки для метчиков',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-40.jpg',
+              title: 'Переходные втулки',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-41.jpg',
+              title: 'Ключи для цанговых патронов',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+            {
+              img: 'assets/images/instruments/instruments-42.jpg',
+              title: 'Гайки для цанговых патронов',
+              text: 'Твердосплавные пластины наиболее универсальны в использовании'
+            },
+          ]
         },
       ],
       links: [
@@ -79,13 +344,13 @@ block content
             +arrow-svg.instruments-page__svg
         .instruments-page__section-container(data-accordion-dropdown='')
           .instruments-page__grid 
-            - for (j = 0; j < 10; j++)
+            each el in item.items
               a.instruments-page__card(href="#") 
                 .instruments-page__card-container 
-                  img(src="assets/images/instrument-1.jpg", alt="")
+                  img(src= el.img, alt="")
                   .arrow-icon
                     +big-arrow-svg.arrow-icon__svg 
                 .instruments-page__card-title 
-                  |Пластины для точения
+                  |#{el.title}
                 .instruments-page__card-text 
-                  |Твердосплавные пластины наиболее универсальны в использовании
+                  |#{el.text}
