--- a/src/views/components/equip-card.pug
+++ b/src/views/components/equip-card.pug
@@ -1,17 +1,17 @@
 mixin equip-card 
   a.equip-card(class=attributes.class href="#")
     .equip-card__image 
-        img(src="assets/images/equip-card-1.jpg", alt="")
+        img(src=attributes.img, alt="")
     .equip-card__container 
       .equip-card__title 
-        |Шлифовальные станки
+        |#{attributes.title}
       if(attributes.text)
         p.equip-card__text
           |#{attributes.text}
       else 
         ul.equip-card__list 
-          - for (x = 0; x < 3; x++)
+          each el in attributes.items
             li.equip-card__item 
-              |Плоскошлифовальные
+              |#{el}
       .arrow-icon 
         +big-arrow-svg.arrow-icon__svg
