--- a/src/views/components/modals.pug
+++ b/src/views/components/modals.pug
@@ -77,7 +77,7 @@ mixin login-modal
                       .tooltip__icon 
                         +tooltip-svg.tooltip__svg
                   .tooltip__container   
-                    |Цена с НДС по курсу ЦБ на 25.06.2021
+                    |#{data.tooltipText}
           .login-modal__form.active(data-form-corp='')
             each item in ddata.corp 
               .form__item 
