--- a/src/views/pages/booking-1.pug
+++ b/src/views/pages/booking-1.pug
@@ -131,7 +131,7 @@ block content
                       .cart-page__card-num
                         |89 0000
                   .cart-page__card-caption 
-                    |Цена с НДС по курсу ЦА на 25.06.2021
+                    |#{data.tooltipText}
                   .cart-page__card-btn 
                     +button.button--wide 
                       |Перейти к оформлению
