--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -88,7 +88,7 @@ block content
                         .tooltip__icon 
                           +tooltip-svg.tooltip__svg
                     .tooltip__container   
-                      |Цена с НДС по курсу ЦБ на 25.06.2021
+                      |#{data.tooltipText}
                   .instruments-card__price-old 
                     |€ 20.55
                 .instruments-card__price-col
