--- a/src/views/components/accordion.pug
+++ b/src/views/components/accordion.pug
@@ -62,4 +62,4 @@ mixin accordion
                     .tooltip__icon 
                       +tooltip-svg.tooltip__svg
                 .tooltip__container   
-                  |Цена с НДС по курсу ЦБ на 25.06.2021
+                  |#{data.tooltipText}
