--- a/src/views/components/aside.pug
+++ b/src/views/components/aside.pug
@@ -63,7 +63,7 @@ mixin aside
                             .tooltip__icon 
                               +tooltip-svg.tooltip__svg
                         .tooltip__container   
-                          |Цена с НДС по курсу ЦБ на 25.06.2021
+                          |#{data.tooltipText}
         .aside__card
           .aside__container 
             h5.aside__title 
