--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -55,7 +55,7 @@ block content
                                 .tooltip__icon 
                                   +tooltip-svg.tooltip__svg
                             .tooltip__container   
-                              |Цена с НДС по курсу ЦБ на 25.06.2021
+                              |#{data.tooltipText}
                       .cart-page__item-col
                         .cart-page__item-container
                           .cart-page__item-caption 
@@ -73,7 +73,7 @@ block content
                     .cart-page__card-num 
                       |89 0000
                 .cart-page__card-caption 
-                  |Цена с НДС по курсу ЦА на 25.06.2021
+                  |#{data.tooltipText}
                 .booking-page__card-row.booking-page__card-inner
                   .cart-page__card-col
                     .booking-page__card-text 
