--- a/src/views/pages/docs.pug
+++ b/src/views/pages/docs.pug
@@ -5,7 +5,45 @@ include ../components/docs-card
 include ../components/tabs
 
 
-block content 
+block content
+  -
+    var ddata = [
+      {
+        title: 'Токарные станки с ЧПУ',
+        text: 'Общие документы',
+        count: 4,
+      },
+      {
+        title: 'Leadwell CNC machines mfg., corp.',
+        text: 'Каталоги производителя',
+        img: 'assets/images/docs/docs-2.jpg',
+        count: 2,
+      },
+      {
+        title: 'Force One machinery',
+        text: 'Каталоги производителя',
+        img: 'assets/images/docs/docs-3.jpg',
+        count: 1,
+      },
+      {
+        title: 'SFM',
+        text: 'Каталоги производителя',
+        count: 3,
+        img: 'assets/images/docs-1.jpg'
+      },
+      {
+        title: 'GSM',
+        text: 'Каталоги производителя',
+        count: 1,
+        img: 'assets/images/docs/docs-4.jpg'
+      },
+      {
+        title: 'POLY GIM',
+        text: 'Каталоги производителя',
+        count: 4,
+        img: 'assets/images/docs/docs-5.jpg'
+      },
+    ]
   .docs-page 
     section.section.section--first 
       .container 
@@ -45,31 +83,20 @@ block content
                       each item in data.selectValues.brand
                         option(value=item)
                           |#{item} 
-    section.section.section--sm
-      .container 
-        .docs-page__row 
-          .docs-page__col
-            h2.docs-page__title 
-              |Токарные станки с ЧПУ
-            .docs-page__text 
-              |Общие документы
-          .docs-page__col 
-        .grid-container.margin-top.margin-top--md 
-          - for (i = 0; i < 3; i++)
-            +docs-card
-    each item in ['Leadwell CNC machines mfg., corp.', 'Force One machinery', 'SFM', 'GSM', 'POLY GIM']
+    each item in ddata
       section.section 
         .container
           .docs-page__row 
             .docs-page__col
               h2.docs-page__title 
-                |Токарные станки с ЧПУ
+                |#{item.title}
               .docs-page__text 
-                |Общие документы
-            .docs-page__col   
-              img.docs-page__image(src="assets/images/docs-1.jpg", alt="")
+                |#{item.text}
+            if (item.img)
+              .docs-page__col   
+                img.docs-page__image(src=item.img, alt="")
           .grid-container.margin-top.margin-top--md 
-            - for (i = 0; i < 3; i++)
+            - for (i = 0; i < item.count; i++)
               +docs-card
     section.section.section--last.margin-top
       .container 
