--- a/src/views/pages/cart-auth.pug
+++ b/src/views/pages/cart-auth.pug
@@ -50,20 +50,20 @@ block content
                           |цена
                         .tooltip
                           .cart-page__item-price.tooltip__row
-                            |€ 93.42
+                            |₽ 93.42
                             span.tooltip__span
                               .tooltip__icon 
                                 +tooltip-svg.tooltip__svg
                           .tooltip__container   
                             |#{data.tooltipText}
                         .cart-page__item-old 
-                          |€ 103.55
+                          |₽ 103.55
                     .cart-page__item-col
                       .cart-page__item-container
                         .cart-page__item-caption 
                           |итого
                         .cart-page__item-price 
-                          |€ 1279.2
+                          |₽ 1279.2
                     .cart-page__item-col
                       .cart-page__item-icon 
                         +trash-svg
@@ -92,7 +92,7 @@ block content
                     .cart-page__card-row 
                       .cart-page__card-col
                         p.cart-page__caption
-                          |Сумма, €
+                          |Сумма, ₽
                       .cart-page__card-col
                         .tooltip
                           .cart-page__card-text.tooltip__row
