--- a/src/assets/styles/pages/booking-page.scss
+++ b/src/assets/styles/pages/booking-page.scss
@@ -49,7 +49,7 @@
     }
 
     &:nth-child(2) {
-      width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+      width: 340px;
       @media (max-width: ($breakpoint - 1px)) {
         margin-top: 24px;
         width: 100%;
